--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pat's Cookie Stand</title>
 </head>
 <body>
+        <header>Pat's Cookie Stand</header>
+        <footer>
+        <a href="/sales.html">Pat's Sales Information.</a>
+        </footer>
     
 </body>
 </html>
