--- a/sales.html
+++ b/sales.html
@@ -4,9 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pat's Sales Information</title>
 </head>
 <body>
+
+    <h1>Pat's Sales Information</h1>
+
+<table>
+    <tr>
+        <th>City</th>
+        <th>Min Cust</th>
+        <th>Max cust</th>
+        <th>Avg Cookie Sales</th>
+    </tr>
+
+    <tr>
+        <td>Seattle</td>
+        <td>Min#</td>
+        <td>Max#</td>
+        <td>Avg Cookie Sales#</td>
+    </tr>
+
+    <tr>
+        <td>Tokyo</td>
+        <td>Min#</td>
+        <td>Max#</td>
+        <td>Avg Cookie Sales#</td>
+    </tr>
+
+    <tr>
+        <td>Dubai</td>
+        <td>Min#</td>
+        <td>Max#</td>
+        <td>Avg Cookie Sales#</td>
+    </tr>
+
+    <tr>
+        <td>Paris</td>
+        <td>Min#</td>
+        <td>Max#</td>
+        <td>Avg Cookie Sales#</td>
+    </tr>
+
+    <tr>
+        <td>Lima</td>
+        <td>Min#</td>
+        <td>Max#</td>
+        <td>Avg Cookie Sales#</td>
+    </tr>
+    
+
+</table>    
     
 </body>
 </html>
