--- a/sales.html
+++ b/sales.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style1.css">
     <title>Pat's Sales Information</title>
+
 </head>
 <body>
 
     <h1>Pat's Sales Information</h1>
 
-<table>
+<table id="sales-Table">
     <tr>
         <th>City</th>
         <th>Min Cust</th>
@@ -56,7 +58,7 @@
 
 </table> 
 
-    <script src="/app.js"></script>
-    
+    <script src="./app.js"></script>
+  
 </body>
 </html>
