--- a/sales.html
+++ b/sales.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style1.css">
+    <link rel="stylesheet" type="text/css" href="1style.css">
     <title>Pat's Sales Information</title>
 
 </head>
@@ -15,8 +15,8 @@
 <table id="sales-Table">
     <tr>
         <th>City</th>
-        <th>Min Cust</th>
-        <th>Max cust</th>
+        <th>Min/Cust</th>
+        <th>Max/Cust</th>
         <th>Avg Cookie Sales</th>
     </tr>
 
