--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <div id="background">
+      <main>
       <h1>Pat's Coffee Shop</h1>
       <section id="about">
         <h2>What is Pat's Coffee?</h2>
@@ -32,7 +33,7 @@
           <a href="sales.html">Pat's Sales Info.  EMPLOYEES ONLY!</a>
         </section>
       </section>
-     
+    </main>
     </div>
   </body>
 </html>
