--- a/sales.html
+++ b/sales.html
@@ -9,9 +9,10 @@
 
 </head>
 <body>
-
+<header>
     <h1>Pat's Sales Information</h1>
-
+</header>
+<main>
 <table id="sales-Table">
     <tr>
         <th>City</th>
@@ -57,7 +58,7 @@
     
 
 </table> 
-
+</main>
     <script src="./app.js"></script>
   
 </body>
