--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </style>
   <head>
     <title>Pat's Coffee Shop</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   </head>
@@ -24,7 +24,7 @@
       <section id="about">
         <h2>What is Pat's Coffee?</h2>
         <p id="about-content">Pat's Coffee Shop, originally located in Seattle, Washington, is known for its savory coffee and Salmon Cookies.</p>
-        <img src="salmon.png" alt="salmon" class="center">;
+        <img src=".img/salmon.png" alt="salmon" class="center">;
         <p id="contact">Contact us at:  (206) 555-3579</p>
         <p id="time">Hours of operation: 8am - 12pm</p>
       </section>
