--- a/sales.html
+++ b/sales.html
@@ -15,7 +15,7 @@
 <main>
 <table id="sales-Table">
     <tr>
-        <th>City</th>
+        <th>Location</th>
         <th>Min/Cust</th>
         <th>Max/Cust</th>
         <th>Avg Cookie Sales</th>
@@ -59,7 +59,7 @@
 
 </table> 
 </main>
-    <script src="./app.js"></script>
+    <script src="js/app.js"></script>
   
 </body>
 </html>
