--- a/americano.html
+++ b/americano.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Product Page">
+    <link rel="stylesheet" type="text/css" href="2style.css">
     <title>Americano</title>
     
 
