--- a/expresso.html
+++ b/expresso.html
@@ -5,10 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">]
     <meta name="description" content="Product Page">
-    <link rel="stylesheet" type="text/css" href="2style.css">
+    <link rel="stylesheet" type="text/css" href="/cookie-stand/css/2style.css">
     <title>Expresso</title>
 </head>
 <body>
+    <main>
+        <h1>Expresso</h1>
+
+        <p>Price: 5.99 ea.</p>
+        <img src="/cookie-stand/image/expresso.jpg" alt="Expresso" class="center">
+    </main> 
+
+    <script src="js/expresso.js"></script>
     
 </body>
 </html>
