--- a/salmon.html
+++ b/salmon.html
@@ -5,11 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Product Page">
-    <link rel="stylesheet" type="text/css" href="2style.css">
+    <link rel="stylesheet" type="text/css" href="/cookie-stand/css/2style.css">
     <title>Salmon Cookies</title>
 
 </head>
 <body>
+    <main>
+        <h1>Salmon Cookies</h1>
+        <p>Price: 3.99 ea.</p>
+        <img src="/cookie-stand/image/salmon.png" alt="Salmon" class="center">
+    </main>
+    <script src="js/salmon.js"></script>
+
     
 </body>
 </html>
