--- a/chocolatechip.html
+++ b/chocolatechip.html
@@ -5,10 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Product Page">
-    <link rel="stylesheet" type="text/css" href="2style.css">
+    <link rel="stylesheet" type="text/css" href="/cookie-stand/css/2style.css">
     <title>Chocolate Chip Cookies</title>
 </head>
 <body>
-    
+    <main>
+        <h1>Chocolate Chip Cookie</h1>
+
+        <p>Price: 1.99 ea.</p>
+        <img src="/cookie-stand/image/chocolatechip.jpg" alt="Chocolate Chip" class="center">
+    </main>
+
+    <script src="js/chocolatechip.js"></script>
+   
 </body>
 </html>
