--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
         <img src="image/salmon.png" alt="salmon" class="center">;
         <p id="contact">Contact us at:  (206) 555-3579</p>
         <p id="time">Hours of operation: 8am - 12pm</p>
+
+      </section>
+
+      <section id="productLink">
+        <p><a href="americano.html"> Americano</a></p>
+        
+        <p><a href="expresso.html"> Expresso</a></p>
+
+        <p><a href="chocolatechip.html"> Chocolate Chip Cookies</a></p>
+
+        <p><a href="salmon.html"> Salmon Cookies</a></p>
+
       </section>
       
       <section id="salesLink">
