--- a/americano.html
+++ b/americano.html
@@ -15,7 +15,11 @@
   <body>
     <main>
       <h1>Americano</h1>
-      <p></p>
+      <div id="sales-page">
+        <p>Cost: <span id="Cost"></span></p>
+        <p>Tax: <span id="Tax"></span></p>
+        <p>Final Cost: <span id="Final Cost"></span></p>
+      </div>
 
       <img
         src="/cookie-stand/image/americano.jpg"
