--- a/chocolatechip.html
+++ b/chocolatechip.html
@@ -1,22 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Product Page">
-    <link rel="stylesheet" type="text/css" href="/cookie-stand/css/2style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Product Page" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/cookie-stand/css/2style.css"
+    />
     <title>Chocolate Chip Cookies</title>
-</head>
-<body>
+  </head>
+  <body>
     <main>
-        <h1>Chocolate Chip Cookie</h1>
+      <h1>Chocolate Chip Cookie</h1>
+      <div id="sales-page">
+        <p>Cost: <span id="Cost"></span></p>
+        <p>Tax: <span id="Tax"></span></p>
+        <p>Final Cost: <span id="Final Cost"></span></p>
+      </div>
 
-        <p>Price: 1.99 ea.</p>
-        <img src="/cookie-stand/image/chocolatechip.jpg" alt="Chocolate Chip" class="center">
+      <img
+        src="/cookie-stand/image/chocolatechip.jpg"
+        alt="Chocolate Chip"
+        class="center"
+      />
     </main>
 
     <script src="js/chocolatechip.js"></script>
-   
-</body>
+  </body>
 </html>
