--- a/expresso.html
+++ b/expresso.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">]
-    <meta name="description" content="Product Page">
-    <link rel="stylesheet" type="text/css" href="/cookie-stand/css/2style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    ]
+    <meta name="description" content="Product Page" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/cookie-stand/css/2style.css"
+    />
     <title>Expresso</title>
-</head>
-<body>
+  </head>
+  <body>
     <main>
-        <h1>Expresso</h1>
+      <h1>Expresso</h1>
+      <div id="sales-page">
+        <p>Cost: <span id="Cost"></span></p>
+        <p>Tax: <span id="Tax"></span></p>
+        <p>Final Cost: <span id="Final Cost"></span></p>
+      </div>
 
-        <p>Price: 5.99 ea.</p>
-        <img src="/cookie-stand/image/expresso.jpg" alt="Expresso" class="center">
-    </main> 
+      <img
+        src="/cookie-stand/image/expresso.jpg"
+        alt="Expresso"
+        class="center"
+      />
+    </main>
 
     <script src="js/expresso.js"></script>
-    
-</body>
+  </body>
 </html>
