--- a/salmon.html
+++ b/salmon.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Product Page">
-    <link rel="stylesheet" type="text/css" href="/cookie-stand/css/2style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Product Page" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/cookie-stand/css/2style.css"
+    />
     <title>Salmon Cookies</title>
-
-</head>
-<body>
+  </head>
+  <body>
     <main>
-        <h1>Salmon Cookies</h1>
-        <p>Price: 3.99 ea.</p>
-        <img src="/cookie-stand/image/salmon.png" alt="Salmon" class="center">
+      <h1>Salmon Cookies</h1>
+      <div id="sales-page">
+        <p>Cost: <span id="Cost"></span></p>
+        <p>Tax: <span id="Tax"></span></p>
+        <p>Final Cost: <span id="Final Cost"></span></p>
+      </div>
+
+      <img src="/cookie-stand/image/salmon.png" alt="Salmon" class="center" />
     </main>
     <script src="js/salmon.js"></script>
-
-    
-</body>
+  </body>
 </html>
