--- a/sales.html
+++ b/sales.html
@@ -13,7 +13,7 @@
     <h1>Pat's Sales Information</h1>
 </header>
 <main>
-<table id="sales-Table">
+<table border="2">
     <tr>
         <th>Location</th>
         <th>Min/Cust</th>
