--- a/sales.html
+++ b/sales.html
@@ -13,48 +13,50 @@
     <h1>Pat's Sales Information</h1>
 </header>
 <main>
-<table border="2">
-    <tr>
-        <th>Location</th>
-        <th>Min/Cust</th>
-        <th>Max/Cust</th>
-        <th>Avg Cookie Sales</th>
-    </tr>
+    <ul>
+        <lh>Seattle</lh>
+        <li>8am</li>
+        <li>9am</li>
+        <li>10am</li>
+        <li>11am</li>
+        <li>12pm</li>
+    </ul>
 
-    <tr>
-        <td>Seattle</td>
-        <td>23</td>
-        <td>65</td>
-        <td>6.3</td>
-    </tr>
+    <ul>
+        <lh>Tokyo</lh>
+        <li>8am</li>
+        <li>9am</li>
+        <li>10am</li>
+        <li>11am</li>
+        <li>12pm</li>
+    </ul>
 
-    <tr>
-        <td>Tokyo</td>
-        <td>3</td>
-        <td>24</td>
-        <td>1.2</td>
-    </tr>
+    <ul>
+        <lh>Dubai</lh>
+        <li>8am</li>
+        <li>9am</li>
+        <li>10am</li>
+        <li>11am</li>
+        <li>12pm</li>
+    </ul>
 
-    <tr>
-        <td>Dubai</td>
-        <td>11</td>
-        <td>38</td>
-        <td>3.7</td>
-    </tr>
+    <ul>
+        <lh>Paris</lh>
+        <li>8am</li>
+        <li>9am</li>
+        <li>10am</li>
+        <li>11am</li>
+        <li>12pm</li>
+    </ul>
 
-    <tr>
-        <td>Paris</td>
-        <td>20</td>
-        <td>38</td>
-        <td>2.3</td>
-    </tr>
-
-    <tr>
-        <td>Lima</td>
-        <td>2</td>
-        <td>16</td>
-        <td>4.6</td>
-    </tr>
+    <ul>
+        <lh>Lima</lh>
+        <li>8am</li>
+        <li>9am</li>
+        <li>10am</li>
+        <li>11am</li>
+        <li>12pm</li>
+    </ul>
     
 
 </table> 
