--- a/sales.html
+++ b/sales.html
@@ -13,54 +13,52 @@
     <h1>Pat's Sales Information</h1>
 </header>
 <main>
-    <ul>
-        <lh>Seattle</lh>
-        <li>8am</li>
-        <li>9am</li>
-        <li>10am</li>
-        <li>11am</li>
-        <li>12pm</li>
-    </ul>
-
-    <ul>
-        <lh>Tokyo</lh>
-        <li>8am</li>
-        <li>9am</li>
-        <li>10am</li>
-        <li>11am</li>
-        <li>12pm</li>
-    </ul>
-
-    <ul>
-        <lh>Dubai</lh>
-        <li>8am</li>
-        <li>9am</li>
-        <li>10am</li>
-        <li>11am</li>
-        <li>12pm</li>
-    </ul>
-
-    <ul>
-        <lh>Paris</lh>
-        <li>8am</li>
-        <li>9am</li>
-        <li>10am</li>
-        <li>11am</li>
-        <li>12pm</li>
-    </ul>
-
-    <ul>
-        <lh>Lima</lh>
-        <li>8am</li>
-        <li>9am</li>
-        <li>10am</li>
-        <li>11am</li>
-        <li>12pm</li>
-    </ul>
+    <h1>Seattle</h1>
+      <div id="customers">
+        <p>8am: <span id="8am"></span></p>
+        <p>9am: <span id="9am"></span></p>
+        <p>10am: <span id="10am"></span></p>
+        <p>11am: <span id="11am"></span></p>
+        <p>12pm: <span id="12am"></span></p>
+      </div>
     
+    <h1>Tokyo</h1>
+      <div id="customers">
+        <p>8am: <span id="8am"></span></p>
+        <p>9am: <span id="9am"></span></p>
+        <p>10am: <span id="10am"></span></p>
+        <p>11am: <span id="11am"></span></p>
+        <p>12pm: <span id="12pm"></span></p>
+      </div>
+    
+    <h1>Dubai</h1>
+      <div id="customers">
+        <p>8am: <span id="8am"></span></p>
+        <p>9am: <span id="9am"></span></p>
+        <p>10am: <span id="10am"></span></p>
+        <p>11am: <span id="11am"></span></p>
+        <p>12pm: <span id="12pm"></span></p>
+      </div>
 
-</table> 
-</main>
+     <h1>Paris</h1>
+      <div id="customers">
+        <p>8am: <span id="8am"></span></p>
+        <p>9am: <span id="9am"></span></p>
+        <p>10am: <span id="10am"></span></p>
+        <p>11am: <span id="11am"></span></p>
+        <p>12pm: <span id="12pm"></span></p>
+      </div>
+
+      <h1>Lima</h1>
+      <div id="customers">
+        <p>8am: <span id="8am"></span></p>
+        <p>9am: <span id="9am"></span></p>
+        <p>10am: <span id="10am"></span></p>
+        <p>11am: <span id="11am"></span></p>
+        <p>12pm: <span id="12pm"></span></p>
+      </div>
+
+   </main>
     <script src="js/app.js"></script>
   
 </body>
