--- a/sales.html
+++ b/sales.html
@@ -23,7 +23,7 @@
       </div>
     
     <h1>Tokyo</h1>
-      <div id="customers">
+      <div id="customers1">
         <p>8am: <span id="8am"></span></p>
         <p>9am: <span id="9am"></span></p>
         <p>10am: <span id="10am"></span></p>
