--- a/sales.html
+++ b/sales.html
@@ -19,11 +19,11 @@
         <p>9am: <span id="9am"></span></p>
         <p>10am: <span id="10am"></span></p>
         <p>11am: <span id="11am"></span></p>
-        <p>12pm: <span id="12am"></span></p>
+        <p>12pm: <span id="12pm"></span></p>
       </div>
     
     <h1>Tokyo</h1>
-      <div id="customers1">
+      <div id="customer">
         <p>8am: <span id="8am"></span></p>
         <p>9am: <span id="9am"></span></p>
         <p>10am: <span id="10am"></span></p>
@@ -32,7 +32,7 @@
       </div>
     
     <h1>Dubai</h1>
-      <div id="customers">
+      <div id="x">
         <p>8am: <span id="8am"></span></p>
         <p>9am: <span id="9am"></span></p>
         <p>10am: <span id="10am"></span></p>
@@ -41,7 +41,7 @@
       </div>
 
      <h1>Paris</h1>
-      <div id="customers">
+      <div id="y">
         <p>8am: <span id="8am"></span></p>
         <p>9am: <span id="9am"></span></p>
         <p>10am: <span id="10am"></span></p>
@@ -50,7 +50,7 @@
       </div>
 
       <h1>Lima</h1>
-      <div id="customers">
+      <div id="z">
         <p>8am: <span id="8am"></span></p>
         <p>9am: <span id="9am"></span></p>
         <p>10am: <span id="10am"></span></p>
