--- a/sales.html
+++ b/sales.html
@@ -14,7 +14,7 @@
 </header>
 <main>
     <h1>Seattle</h1>
-      <div id="customers">
+      <div id="store">
         <p>8am: <span id="8am"></span></p>
         <p>9am: <span id="9am"></span></p>
         <p>10am: <span id="10am"></span></p>
@@ -23,7 +23,7 @@
       </div>
     
     <h1>Tokyo</h1>
-      <div id="customer">
+      <div id="store">
         <p>8am: <span id="8am"></span></p>
         <p>9am: <span id="9am"></span></p>
         <p>10am: <span id="10am"></span></p>
@@ -32,7 +32,7 @@
       </div>
     
     <h1>Dubai</h1>
-      <div id="x">
+      <div id="store">
         <p>8am: <span id="8am"></span></p>
         <p>9am: <span id="9am"></span></p>
         <p>10am: <span id="10am"></span></p>
@@ -41,7 +41,7 @@
       </div>
 
      <h1>Paris</h1>
-      <div id="y">
+      <div id="store">
         <p>8am: <span id="8am"></span></p>
         <p>9am: <span id="9am"></span></p>
         <p>10am: <span id="10am"></span></p>
@@ -50,7 +50,7 @@
       </div>
 
       <h1>Lima</h1>
-      <div id="z">
+      <div id="store">
         <p>8am: <span id="8am"></span></p>
         <p>9am: <span id="9am"></span></p>
         <p>10am: <span id="10am"></span></p>
