--- a/sales.html
+++ b/sales.html
@@ -15,47 +15,47 @@
 <main>
     <h1>Seattle</h1>
       <div id="store">
-        <p>8am: <span id="8am"></span></p>
-        <p>9am: <span id="9am"></span></p>
-        <p>10am: <span id="10am"></span></p>
-        <p>11am: <span id="11am"></span></p>
-        <p>12pm: <span id="12pm"></span></p>
+        <li>8am: <span id="8am"></span></li>
+        <li>9am: <span id="9am"></span></li>
+        <li>10am: <span id="10am"></span></li>
+        <li>11am: <span id="11am"></span></li>
+        <li>12pm: <span id="12pm"></span></li>
       </div>
     
     <h1>Tokyo</h1>
       <div id="store">
-        <p>8am: <span id="8am"></span></p>
-        <p>9am: <span id="9am"></span></p>
-        <p>10am: <span id="10am"></span></p>
-        <p>11am: <span id="11am"></span></p>
-        <p>12pm: <span id="12pm"></span></p>
+        <li>8am: <span id="8am"></span></li>
+        <li>9am: <span id="9am"></span></li>
+        <li>10am: <span id="10am"></span></li>
+        <li>11am: <span id="11am"></span></li>
+        <li>12pm: <span id="12pm"></span></li>
       </div>
     
     <h1>Dubai</h1>
       <div id="store">
-        <p>8am: <span id="8am"></span></p>
-        <p>9am: <span id="9am"></span></p>
-        <p>10am: <span id="10am"></span></p>
-        <p>11am: <span id="11am"></span></p>
-        <p>12pm: <span id="12pm"></span></p>
+        <li>8am: <span id="8am"></span></li>
+        <li>9am: <span id="9am"></span></li>
+        <li>10am: <span id="10am"></span></li>
+        <li>11am: <span id="11am"></span></li>
+        <li>12pm: <span id="12pm"></span></li>
       </div>
 
      <h1>Paris</h1>
       <div id="store">
-        <p>8am: <span id="8am"></span></p>
-        <p>9am: <span id="9am"></span></p>
-        <p>10am: <span id="10am"></span></p>
-        <p>11am: <span id="11am"></span></p>
-        <p>12pm: <span id="12pm"></span></p>
+        <li>8am: <span id="8am"></span></li>
+        <li>9am: <span id="9am"></span></li>
+        <li>10am: <span id="10am"></span></li>
+        <li>11am: <span id="11am"></span></li>
+        <li>12pm: <span id="12pm"></span></li>
       </div>
 
       <h1>Lima</h1>
       <div id="store">
-        <p>8am: <span id="8am"></span></p>
-        <p>9am: <span id="9am"></span></p>
-        <p>10am: <span id="10am"></span></p>
-        <p>11am: <span id="11am"></span></p>
-        <p>12pm: <span id="12pm"></span></p>
+        <li>8am: <span id="8am"></span></li>
+        <li>9am: <span id="9am"></span></li>
+        <li>10am: <span id="10am"></span></li>
+        <li>11am: <span id="11am"></span></li>
+        <li>12pm: <span id="12pm"></span></li>
       </div>
 
    </main>
