--- a/sales.html
+++ b/sales.html
@@ -13,50 +13,7 @@
     <h1>Pat's Sales Information</h1>
 </header>
 <main>
-    <h1>Seattle</h1>
-      <div id="store">
-        <li>8am: <span id="8am"></span></li>
-        <li>9am: <span id="9am"></span></li>
-        <li>10am: <span id="10am"></span></li>
-        <li>11am: <span id="11am"></span></li>
-        <li>12pm: <span id="12pm"></span></li>
-      </div>
-    
-    <h1>Tokyo</h1>
-      <div id="store">
-        <li>8am: <span id="8am"></span></li>
-        <li>9am: <span id="9am"></span></li>
-        <li>10am: <span id="10am"></span></li>
-        <li>11am: <span id="11am"></span></li>
-        <li>12pm: <span id="12pm"></span></li>
-      </div>
-    
-    <h1>Dubai</h1>
-      <div id="store">
-        <li>8am: <span id="8am"></span></li>
-        <li>9am: <span id="9am"></span></li>
-        <li>10am: <span id="10am"></span></li>
-        <li>11am: <span id="11am"></span></li>
-        <li>12pm: <span id="12pm"></span></li>
-      </div>
-
-     <h1>Paris</h1>
-      <div id="store">
-        <li>8am: <span id="8am"></span></li>
-        <li>9am: <span id="9am"></span></li>
-        <li>10am: <span id="10am"></span></li>
-        <li>11am: <span id="11am"></span></li>
-        <li>12pm: <span id="12pm"></span></li>
-      </div>
-
-      <h1>Lima</h1>
-      <div id="store">
-        <li>8am: <span id="8am"></span></li>
-        <li>9am: <span id="9am"></span></li>
-        <li>10am: <span id="10am"></span></li>
-        <li>11am: <span id="11am"></span></li>
-        <li>12pm: <span id="12pm"></span></li>
-      </div>
+   <div id="store"></div>
 
    </main>
     <script src="js/app.js"></script>
