--- a/lab7.html
+++ b/lab7.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pat's Coffee Shop Table</title>
 </head>
 <body>
-    <table border="2">
-        
-    </table>
+    <main>
+        <div id="store"></div>
+     
+        </main>  
+    <script src="js/7.js"></script>    
 </body>
 </html>
