Added html page

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
       <section id="salesLink">
           <a href="sales.html">Pat's Sales Info.  EMPLOYEES ONLY!</a>
         </section>
+
+        <section id="salesLink2">
+          <a href="lab7.html">Pat's Second Sales Page.  EMPLOYEES ONLY!</a>
+        </section>
       </section>
     </main>
     </div>
