Made changes to index.html.  Added New Link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </style>
   <head>
     <title>Pat's Coffee Shop</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   </head>
@@ -45,7 +45,7 @@
           <a href="sales.html">Pat's Sales Info.  EMPLOYEES ONLY!</a>
         </section>
 
-        <section id="salesLink2">
+      <section id="salesLink2">
           <a href="lab7.html">Pat's Second Sales Page.  EMPLOYEES ONLY!</a>
         </section>
       </section>
