--- a/lab7.html
+++ b/lab7.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pat's Coffee Shop Table</title>
-</head>
-<body>
+  </head>
+  <body>
     <main>
-        <div id="store"></div>
-     
-        </main>  
-    <script src="js/7.js"></script>    
-</body>
+      <div id="sales"></div>
+    </main>
+    <script src="js/7.js"></script>
+  </body>
 </html>
