--- a/sales.html
+++ b/sales.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/1style.css"">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="css/1style.css" />
     <title>Pat's Sales Information</title>
-
-</head>
-<body>
-<header>
-    <h1>Pat's Sales Information</h1>
-</header>
-<main>
-   <div id="store"></div>
-
-   </main>
+  </head>
+  <body>
+    <header>
+      <h1>Pat's Sales Information</h1>
+    </header>
+    <main>
+      <div id="store"></div>
+    </main>
     <script src="js/app.js"></script>
-  
-</body>
+  </body>
 </html>
