changes in html and js

--- a/lab7.html
+++ b/lab7.html
@@ -9,7 +9,10 @@
   </head>
   <body>
     <main>
-      <div id="sales"></div>
+      <div id="store"></div>
+      <table id="sales">
+        <tr id="heading-row"></tr>
+      </table>
     </main>
     <script src="js/7.js"></script>
   </body>
