--- a/lab7.html
+++ b/lab7.html
@@ -11,7 +11,9 @@
     <main>
       <div id="store"></div>
       <table id="sales">
-        <tr id="heading-row"></tr>
+        <tr id="heading-row">
+          <td></td>
+        </tr>
       </table>
     </main>
     <script src="js/7.js"></script>
