--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="descriptions" content="Pat's Coffee Shop">
   <style>
-    img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+    body {
+    background-image: url(image/Coffee.jpg);
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     }
   </style>
   <head>
