--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     margin-left: auto;
     margin-right: auto;
     }
+
+    img { 
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  
   </style>
   <head>
     <title>Pat's Coffee Shop</title>
