--- a/lab7.html
+++ b/lab7.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <div id="store"></div>
-      <table id="sales">
+      <table id="sales" class="center">
         <tr id="heading-row">
           <td></td>
         </tr>
