--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <section id="about">
         <h2>What is Pat's Coffee?</h2>
         <p id="about-content">Pat's Coffee Shop, originally located in Seattle, Washington, is known for its savory coffee and Salmon Cookies.</p>
-        <img src="image/salmon.png" alt="salmon" width="30%" class="center">;
+        <img src="image/salmon.png" alt="salmon" width="30%" class="center">
         <p id="contact">Contact us at:  (206) 555-3579</p>
         <p id="time">Hours of operation: 8am - 12pm</p>
 
