Corrected index.html and css

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="descriptions" content="Pat's Coffee Shop">
   <style>
     body {
-    background-image: url(image/Coffee.jpg);
+    background-image: url("image/Coffee.jpg");
     display: block;
     margin-left: auto;
     margin-right: auto;
+    background-repeat: space;
+    background-size: 140px;
     }
 
     img { 
