--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
       </section>
 
       <section id="productLink">
-        <p><a href="americano.html"> Americano</a></p>
+        <p><img id ="americano" src ="image/americano.jpg"><a href="americano.html"> Americano</a></p>
         
-        <p><a href="expresso.html"> Expresso</a></p>
+        <p><img id ="expresso" src ="image/expresso.jpg"><a href="expresso.html"> Expresso</a></p>
 
-        <p><a href="chocolatechip.html"> Chocolate Chip Cookies</a></p>
+        <p><img id ="chocolate-chip" src ="image/chocolatechip.jpg"><a href="chocolatechip.html"> Chocolate Chip Cookies</a></p>
 
-        <p><a href="salmon.html"> Salmon Cookies</a></p>
+        <p><img id ="salmon-cookie" src ="image/frosted-cookie.jpg"><a href="salmon.html"> Salmon Cookies</a></p>
 
       </section>
       
