Added changes to html also changed some size

--- a/index.html
+++ b/index.html
@@ -1,60 +1,90 @@
 <!DOCTYPE html>
 <html>
-  <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="descriptions" content="Pat's Coffee Shop">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="descriptions" content="Pat's Coffee Shop" />
   <style>
     body {
-    background-image: url("image/Coffee.jpg");
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    background-repeat: space;
-    background-size: 140px;
+      background-image: url("image/Coffee.jpg");
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      background-repeat: space;
+      background-size: 140px;
     }
 
-    img { 
+    img {
       display: block;
       margin-left: auto;
       margin-right: auto;
     }
-  
   </style>
   <head>
     <title>Pat's Coffee Shop</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="background">
       <main>
-      <h1>Pat's Coffee Shop</h1>
-      <section id="about">
-        <h2>What is Pat's Coffee?</h2>
-        <p id="about-content">Pat's Coffee Shop, originally located in Seattle, Washington, is known for its savory coffee and Salmon Cookies.</p>
-        <img src="image/salmon.png" alt="salmon" width="30%" class="center">
-        <p id="contact">Contact us at:  (206) 555-3579 or Email us: <a href= "patcoffee@gmail.com">patcoffee@gmail.com</a></p>
-        <p id="time">Hours of operation: 8am - 12pm</p>
-      </section>
-
-      <section id="productLink">
-        <p><img id ="americano" src ="image/americano.jpg"><a href="americano.html"> Americano</a></p>
-        <p><img id ="expresso" src ="image/expresso.jpg"><a href="expresso.html"> Expresso</a></p>
-        <p><img id ="chocolate-chip" src ="image/chocolatechip.jpg"><a href="chocolatechip.html"> Chocolate Chip Cookies</a></p>
-        <p><img id ="salmon-cookie" src ="image/frosted-cookie.jpg"><a href="salmon.html"> Salmon Cookies</a></p>
-      </section>
-      
-      <section id="salesLink">
-          <a href="sales.html">Pat's Sales Info.  EMPLOYEES ONLY!</a>
+        <section id="about">
+          <h1>Pat's Coffee Shop</h1>
+          <h2>What is Pat's Coffee?</h2>
+          <p id="about-content">
+            Pat's Coffee Shop, originally located in Seattle, Washington, is
+            known for its savory coffee and Salmon Cookies.
+          </p>
+          <img src="image/salmon.png" alt="salmon" width="30%" class="center" />
+          <p id="contact">
+            Contact us at: (206) 555-3579 or Email us:
+            <a href="patcoffee@gmail.com">patcoffee@gmail.com</a>
+          </p>
+          <p id="time">Hours of operation: 8am - 12pm</p>
         </section>
 
-      <section id="salesLink2">
-          <a href="lab7.html">Pat's Second Sales Page.  EMPLOYEES ONLY!</a>
+        <section id="productLink">
+          <p>
+            <img id="americano" src="image/americano.jpg" /><a
+              href="americano.html"
+            >
+              Americano</a
+            >
+          </p>
+          <p>
+            <img id="expresso" src="image/expresso.jpg" /><a
+              href="expresso.html"
+            >
+              Expresso</a
+            >
+          </p>
+          <p>
+            <img id="chocolate-chip" src="image/chocolatechip.jpg" /><a
+              href="chocolatechip.html"
+            >
+              Chocolate Chip Cookies</a
+            >
+          </p>
+          <p>
+            <img id="salmon-cookie" src="image/frosted-cookie.jpg" /><a
+              href="salmon.html"
+            >
+              Salmon Cookies</a
+            >
+          </p>
+          <a href="lab7.html">Pat's Sales Page. EMPLOYEES ONLY!</a>
         </section>
-      </section>
-    </main>
+        <div id="images">
+          <img alt="family" src="/cookie-stand/image/family.jpg" />
+        </div>
+      </main>
     </div>
   </body>
 </html>
