added alt to images

--- a/index.html
+++ b/index.html
@@ -52,32 +52,32 @@
 
         <section id="productLink">
           <p>
-            <img id="americano" src="image/americano.jpg" /><a
+            <img id="americano" alt="americano" src="image/americano.jpg" /><a
               href="americano.html"
             >
               Americano</a
             >
           </p>
           <p>
-            <img id="expresso" src="image/expresso.jpg" /><a
+            <img id="expresso" alt="expresso" src="image/expresso.jpg" /><a
               href="expresso.html"
             >
               Expresso</a
             >
           </p>
           <p>
-            <img id="chocolate-chip" src="image/chocolatechip.jpg" /><a
-              href="chocolatechip.html"
-            >
-              Chocolate Chip Cookies</a
-            >
+            <img
+              id="chocolate-chip"
+              alt="chocolate-chip"
+              src="image/chocolatechip.jpg"
+            /><a href="chocolatechip.html"> Chocolate Chip Cookies</a>
           </p>
           <p>
-            <img id="salmon-cookie" src="image/frosted-cookie.jpg" /><a
-              href="salmon.html"
-            >
-              Salmon Cookies</a
-            >
+            <img
+              id="frosted-cookie"
+              alt="frosted-cookie"
+              src="image/frosted-cookie.jpg"
+            /><a href="salmon.html"> Salmon Cookies</a>
           </p>
           <a href="lab7.html">Pat's Sales Page. EMPLOYEES ONLY!</a>
         </section>
