Table working form not working

--- a/lab7.html
+++ b/lab7.html
@@ -18,9 +18,9 @@
           >Max Customer<input type="text" id="max-cust"
         /></label>
         <label for="avg-cookie-sales"
-          >Avg Cookie Sales<input type="text" id="avg-cookie=sales"
+          >Avg Cookie Sales<input type="text" id="avg-cookie-sales"
         /></label>
-        <button type="submit">Submit</button>
+        <button type="submit" id="submit">Submit</button>
       </fieldset>
     </form>
     <section id="results"></section>
@@ -32,6 +32,6 @@
         </tr>
       </table>
     </main>
-    <script src="js/7.js"></script>
+    <script src="/cookie-stand/js/7.js"></script>
   </body>
 </html>
