Form event working

--- a/lab7.html
+++ b/lab7.html
@@ -11,14 +11,14 @@
     <form id="store-form">
       <fieldset>
         <label for="store">Store<input type="text" id="store" /></label>
-        <label for="min-cust"
-          >Min Customer<input type="text" id="min-cust"
+        <label for="minCust"
+          >Min Customer<input type="text" id="minCust"
         /></label>
-        <label for="max-cust"
-          >Max Customer<input type="text" id="max-cust"
+        <label for="maxCust"
+          >Max Customer<input type="text" id="maxCust"
         /></label>
-        <label for="avg-cookie-sales"
-          >Avg Cookie Sales<input type="text" id="avg-cookie-sales"
+        <label for="avgCookiesPerSales"
+          >Avg Cookies Per Sales<input type="text" id="avgCookiesPerSales"
         /></label>
         <button type="submit" id="submit">Submit</button>
       </fieldset>
